New conversation tools layout. Each instance now has its own tools palette that scrolls with the conversations.

--- a/app.jade
+++ b/app.jade
@@ -44,7 +44,7 @@ html(lang='en', ng-app='appmodule', ng-controller='appCtr')
                   i.icon-chat
                   | Conversations
           li.home(ng-class='{selected : accountId == "all"}')
-            a(href='#/account/all/campaign/camp0+camp1+camp2/conversations', ng-click='toggleSidebar()') Global Feed
+            a(href='#/account/all/campaign/camp0+camp1+camp2/conversations', ng-click='toggleSidebar()') Global Conversations
           li(ng-repeat='account in accountList', ng-class='{selected : accountId == account.id}')
             a(href='#/account/{{account.id}}/dashboard', ng-click='toggleSidebar()')
               span(ng-bind='account.id')
