--- a/partials/panel.html
+++ b/partials/panel.html
@@ -20,7 +20,7 @@
           </ul>
           <button ng-click="addAnswer('',buildQuestion.answers)" class="btn outline soft">+ Answer</button>
           <input id="limit" type="checkbox" name="limit" class="inline"/>
-          <label for="limit" class="inline">Limit to one one response.        </label>
+          <label for="limit" class="inline">Limit to one response.        </label>
         </div>
       </fieldset>
     </div>
