--- a/jade_partials/edit.html.jade
+++ b/jade_partials/edit.html.jade
@@ -15,58 +15,59 @@ nav.breadcrumbs
 .scroller_wrapper.with_breadcrumb_padding
   .scroller
     .form
-      .padded(ng-switch='currentStep')
+      div(ng-switch='currentStep')
         div(ng-switch-when='0')
-          h1 Set of Questions:
-          p A smaller number is better. Have fun with it!
+          .padded
+            h1 Ask Questions
+            p A smaller number is better. Have fun with it!
           div.card.padded
             h1(type='text', ng-bind='campaignTitle')
             div(ng-include src='"partials/form_not_completed.html"')
             button.outline.confirm.btn(ng-click='togglePanel(\'Create Question\')') + New Question
         div(ng-switch-when='1')
-          h1 Bonus:
-          p Create a bonus as a "thank you".
-          form.card.padded(method='post', action='')
-            h3 Bonus details:
-            label(for='personal_message', ng-model='buildCampaign.message') Create a personal message for the recipient:
-            textarea#personal_message(placeholder='(optional)')
-            label(for='title') Title:
-            input(type='text', name='title', ng-model='buildCampaign.reward.title', placeholder='Gift Title')
-            label(for='terms') Terms:
-            input(type='text', name='terms', ng-model='buildCampaign.reward.terms', placeholder='Terms and Conditions')
-            h3 Validity:
-            div
-              label(for='title') Start Date:
-              input(type='date', name='start_date', ng-model='buildCampaign.reward.start_date', placeholder='')
-              label(for='title') Start Time:
-              input(type='time', name='start_time', ng-model='buildCampaign.reward.start_time', placeholder='')
-              label(for='title') End Date:
-              input(type='date', name='end_date', ng-model='buildCampaign.reward.end_date', placeholder='')
-              label(for='title') End Time:
-              input(type='time', name='end_time', ng-model='buildCampaign.reward.end_time', placeholder='')
-              input#delay.inline(type='checkbox', name='delay')
-              label.inline(for='delay')
-                | 24-hour delay
-                small (user must wait 24 hours before redeeming.)
-            h3 Sharability:
-            div
-              fieldset
-                input#not_sharable.inline(ng-model='sharability', type='radio', name='sharability', ng-true-value='not_sharable')
-                label.inline(for='not_sharable') not sharable 
-              fieldset
-                input#sharable_three.inline(ng-model='sharability', type='radio', name='sharability', ng-true-value='sharable_three')
-                label.inline(for='sharable_three')
-                  | three times
-                  small (User may share this bonus with up to three (3) contacts.)
-              fieldset
-                input#sharable_any.inline(ng-model='sharability', type='radio', name='sharability', ng-true-value='sharable_any')
-                label.inline(for='sharable_any')
-                  | openly sharable
-                  small
-                    | (This bonus can be shared freely through any means (blogs, social networks, email, etc.)
+          .padded
+            h1 Bonus:
+            p Offer a bonus as a "thank you". People will appriciate it.
+          form(method='post', action='')
+            .card.padded  
+              h3 Bonus Details
+              label(for='personal_message', ng-model='buildCampaign.message') Create a personal message for the recipient:
+              textarea#personal_message(placeholder='(optional)')
+              label(for='title') Title:
+              input(type='text', name='title', ng-model='buildCampaign.reward.title', placeholder='Gift Title')
+              label(for='terms') Terms:
+              input(type='text', name='terms', ng-model='buildCampaign.reward.terms', placeholder='Terms and Conditions')
+            .card.padded  
+              h3 Validity
+              div
+                label(for='title') Start Date:
+                input(type='date', name='start_date', ng-model='buildCampaign.reward.start_date', placeholder='')
+                label(for='title') Start Time:
+                input(type='time', name='start_time', ng-model='buildCampaign.reward.start_time', placeholder='')
+                label(for='title') End Date:
+                input(type='date', name='end_date', ng-model='buildCampaign.reward.end_date', placeholder='')
+                label(for='title') End Time:
+                input(type='time', name='end_time', ng-model='buildCampaign.reward.end_time', placeholder='')
+                input#delay.inline(type='checkbox', name='delay')
+                label.inline(for='delay')
+                  | 24-hour delay
+                  small (user must wait 24 hours before redeeming.)
+            .card.padded  
+              h3 Sharability
+              div
+                fieldset
+                  input#not_sharable.inline(ng-model='sharability', type='radio', name='sharability', ng-true-value='not_sharable')
+                  label.inline(for='not_sharable') No sharing this bonus. 
+                fieldset
+                  input#sharable_three.inline(ng-model='sharability', type='radio', name='sharability', ng-true-value='sharable_three')
+                  label.inline(for='sharable_three') Recipient can share with three friends.
+                fieldset
+                  input#sharable_any.inline(ng-model='sharability', type='radio', name='sharability', ng-true-value='sharable_any')
+                  label.inline(for='sharable_any') Openly sharable.
         div(ng-switch-when='2')
-          h1 Get social!
-          p Connect social media accounts to share your feedback with.
+          .padded
+            h1 Get social
+            p Add social media accounts so that people can share good feedback about you.
           div.card.padded
             ul
               li
@@ -75,12 +76,12 @@ nav.breadcrumbs
               li
                 | Twitter Account
                 small.status connected
-            button.btn(ng-click='togglePanel(\'social_accounts\')') Add new media account
         div(ng-switch-when='3')
-          h1 Build a team:
-          p Invite others to manage this campaign with you.
+          .padded
+            h1 Add Permissions
+            p Get your team involved.
           form.card.padded(ng-submit='sendInvite(first, last, invite_email, level, buildCampaign.permissions.pending)')
-            h3 Add Team:
+            h3 Invite Teammate
             label(for='name') Full Name:
             input(ng-model='name', type='text', name='name', placeholder='name')
             label(for='email') Email:
@@ -88,36 +89,36 @@ nav.breadcrumbs
             label(for='message') Message:
             textarea(placeholder='optional')
             div
-              label Permission level:
-              fieldset.inline
-                input#perm_respond(ng-model='perm_respond', type='checkbox', name='perm_respond', ng-true-value='respond')
-                label(for='perm_respond') view only
-              fieldset.inline
-                input#perm_export(ng-model='perm_export', type='checkbox', name='perm_export', ng-true-value='export')
-                label(for='perm_export') respond
-              fieldset.inline
-                input#perm_admin(ng-model='perm_admin', type='checkbox', name='perm_admin', ng-true-value='admin')
-                label(for='perm_admin') admin + export
+              label Permission level
+              fieldset
+                input.inline#perm_respond(ng-model='perm_respond', type='checkbox', name='perm_respond', ng-true-value='respond')
+                label.inline(for='perm_respond') review only
+              fieldset
+                input.inline#perm_export(ng-model='perm_export', type='checkbox', name='perm_export', ng-true-value='export')
+                label.inline(for='perm_export') review + respond
+              fieldset
+                input.inline#perm_admin(ng-model='perm_admin', type='checkbox', name='perm_admin', ng-true-value='admin')
+                label.inline(for='perm_admin') admin
             button.new_invite.btn Send
           .card.padded
-            h2 Permissions set:
+            h2 Permissions set
             ul
               li(ng-repeat='person in buildCampaign.permissions.accepted')
                 | {{person.first}} {{person.last}}
                 small.status permission level: {{person.level}}
                 button.btn.right(ng-click='deleteListItem($index, buildCampaign.permissions.accepted)') revoke
                 div
-                  label change permissions:
-                  fieldset.inline
-                    input#perm_respond(ng-model='person.level', type='checkbox', name='perm_respond', ng-true-value='respond')
-                    label(for='perm_respond') view only
-                  fieldset.inline
-                    input#perm_export(ng-model='person.level', type='checkbox', name='perm_export', ng-true-value='respond')
-                    label(for='perm_export') respond
-                  fieldset.inline
-                    input#perm_admin(ng-model='person.level', type='checkbox', name='perm_admin', ng-true-value='admin')
-                    label(for='perm_admin') admin + export
-            h2 Pending Invites:
+                  label change permissions
+                  fieldset
+                    input.inline#perm_respond_change(ng-model='person.level', type='checkbox', name='perm_respond', ng-true-value='respond')
+                    label.inline(for='perm_respond_change') review only
+                  fieldset
+                    input.inline#perm_export_change(ng-model='person.level', type='checkbox', name='perm_export', ng-true-value='export')
+                    label.inline(for='perm_export_change') review + respond
+                  fieldset
+                    input.inline#perm_admin_change(ng-model='person.level', type='checkbox', name='perm_admin', ng-true-value='admin')
+                    label.inline(for='perm_admin_change') admin
+            h2 Pending Invites
             ul
               li(ng-repeat='person in buildCampaign.permissions.pending')
                 | {{person.first}} {{person.last}} ({{person.email}}, {{person.level}})
@@ -125,26 +126,6 @@ nav.breadcrumbs
                 button.btn.right.clear resend
                 button.btn.right(ng-click='deleteListItem($index, buildCampaign.permissions.pending)') cancel
         div(ng-switch-when='4')
-          h1 This step needs to be removed.
-          div.card.padded
-            h3 Security:
-            fieldset.inline
-              input(type='checkbox')
-              label public
-            fieldset.inline
-              input(type='checkbox')
-              label private
-            fieldset.inline
-              input(type='checkbox')
-              label passphrase protected
-          div
-            input#discoverable.inline(ng-model='buildCampaign.discoverable', type='checkbox')
-            label.inline(for='discoverable') location discoverable?
-          div(ng-show='buildCampaign.discoverable')
-            ol
-              li(ng-repeat='location in buildCampaign.locationsList')
-                p(ng-bind='location.text')
-            form(ng-submit='addLocation(addLocation_address.text, buildCampaign.locationsList)', ng-model='addLocation_form', name='addLocation_form')
-              label(for='url') Add an address to your campaign (optional):
-              input#addLocation_address(ng-model='addLocation_address.text', type='text', name='addLocation_address', placeholder='1 Street Address, Whereverville, FL')
-              button.btn + location
+          .card.padded
+            h1 Launch campaign
+            p Send your campiagn into the world.
