--- a/partials/edit.html
+++ b/partials/edit.html
@@ -14,10 +14,12 @@
 <div class="scroller_wrapper with_breadcrumb_padding">
   <div class="scroller">
     <div class="form">
-      <div ng-switch="currentStep" class="padded">
+      <div ng-switch="currentStep">
         <div ng-switch-when="0">
-          <h1>Set of Questions:</h1>
-          <p>A smaller number is better. Have fun with it!</p>
+          <div class="padded">
+            <h1>Ask Questions</h1>
+            <p>A smaller number is better. Have fun with it!</p>
+          </div>
           <div class="card padded">
             <h1 type="text" ng-bind="campaignTitle"></h1>
             <div ng-include src="&quot;partials/form_not_completed.html&quot;"></div>
@@ -25,62 +27,73 @@
           </div>
         </div>
         <div ng-switch-when="1">
-          <h1>Bonus:</h1>
-          <p>Create a bonus as a "thank you".</p>
-          <form method="post" action="" class="card padded">
-            <h3>Bonus details:</h3>
-            <label for="personal_message" ng-model="buildCampaign.message">Create a personal message for the recipient:</label>
-            <textarea id="personal_message" placeholder="(optional)"></textarea>
-            <label for="title">Title:</label>
-            <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title"/>
-            <label for="terms">Terms:</label>
-            <input type="text" name="terms" ng-model="buildCampaign.reward.terms" placeholder="Terms and Conditions"/>
-            <h3>Validity:</h3>
-            <div>
-              <label for="title">Start Date:</label>
-              <input type="date" name="start_date" ng-model="buildCampaign.reward.start_date" placeholder=""/>
-              <label for="title">Start Time:</label>
-              <input type="time" name="start_time" ng-model="buildCampaign.reward.start_time" placeholder=""/>
-              <label for="title">End Date:</label>
-              <input type="date" name="end_date" ng-model="buildCampaign.reward.end_date" placeholder=""/>
-              <label for="title">End Time:</label>
-              <input type="time" name="end_time" ng-model="buildCampaign.reward.end_time" placeholder=""/>
-              <input id="delay" type="checkbox" name="delay" class="inline"/>
-              <label for="delay" class="inline">24-hour delay<small>(user must wait 24 hours before redeeming.)</small></label>
+          <div class="padded">
+            <h1>Bonus:</h1>
+            <p>Offer a bonus as a "thank you". People will appriciate it.</p>
+          </div>
+          <form method="post" action="">
+            <div class="card padded"> 
+              <h3>Bonus Details</h3>
+              <label for="personal_message" ng-model="buildCampaign.message">Create a personal message for the recipient:</label>
+              <textarea id="personal_message" placeholder="(optional)"></textarea>
+              <label for="title">Title:</label>
+              <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title"/>
+              <label for="terms">Terms:</label>
+              <input type="text" name="terms" ng-model="buildCampaign.reward.terms" placeholder="Terms and Conditions"/>
             </div>
-            <h3>Sharability:</h3>
-            <div>
-              <fieldset>
-                <input id="not_sharable" ng-model="sharability" type="radio" name="sharability" ng-true-value="not_sharable" class="inline"/>
-                <label for="not_sharable" class="inline">not sharable </label>
-              </fieldset>
-              <fieldset>
-                <input id="sharable_three" ng-model="sharability" type="radio" name="sharability" ng-true-value="sharable_three" class="inline"/>
-                <label for="sharable_three" class="inline">three times<small>(User may share this bonus with up to three (3) contacts.)</small></label>
-              </fieldset>
-              <fieldset>
-                <input id="sharable_any" ng-model="sharability" type="radio" name="sharability" ng-true-value="sharable_any" class="inline"/>
-                <label for="sharable_any" class="inline">openly sharable<small>(This bonus can be shared freely through any means (blogs, social networks, email, etc.)</small></label>
-              </fieldset>
+            <div class="card padded"> 
+              <h3>Validity</h3>
+              <div>
+                <label for="title">Start Date:</label>
+                <input type="date" name="start_date" ng-model="buildCampaign.reward.start_date" placeholder=""/>
+                <label for="title">Start Time:</label>
+                <input type="time" name="start_time" ng-model="buildCampaign.reward.start_time" placeholder=""/>
+                <label for="title">End Date:</label>
+                <input type="date" name="end_date" ng-model="buildCampaign.reward.end_date" placeholder=""/>
+                <label for="title">End Time:</label>
+                <input type="time" name="end_time" ng-model="buildCampaign.reward.end_time" placeholder=""/>
+                <input id="delay" type="checkbox" name="delay" class="inline"/>
+                <label for="delay" class="inline">24-hour delay<small>(user must wait 24 hours before redeeming.)</small></label>
+              </div>
+            </div>
+            <div class="card padded"> 
+              <h3>Sharability</h3>
+              <div>
+                <fieldset>
+                  <input id="not_sharable" ng-model="sharability" type="radio" name="sharability" ng-true-value="not_sharable" class="inline"/>
+                  <label for="not_sharable" class="inline">No sharing this bonus. </label>
+                </fieldset>
+                <fieldset>
+                  <input id="sharable_three" ng-model="sharability" type="radio" name="sharability" ng-true-value="sharable_three" class="inline"/>
+                  <label for="sharable_three" class="inline">Recipient can share with three friends.</label>
+                </fieldset>
+                <fieldset>
+                  <input id="sharable_any" ng-model="sharability" type="radio" name="sharability" ng-true-value="sharable_any" class="inline"/>
+                  <label for="sharable_any" class="inline">Openly sharable.</label>
+                </fieldset>
+              </div>
             </div>
           </form>
         </div>
         <div ng-switch-when="2">
-          <h1>Get social!</h1>
-          <p>Connect social media accounts to share your feedback with.</p>
+          <div class="padded">
+            <h1>Get social</h1>
+            <p>Add social media accounts so that people can share good feedback about you.</p>
+          </div>
           <div class="card padded">
             <ul>
               <li>Facebook Account<small class="status">connected</small></li>
               <li>Twitter Account<small class="status">connected</small></li>
             </ul>
-            <button ng-click="togglePanel('social_accounts')" class="btn">Add new media account</button>
           </div>
         </div>
         <div ng-switch-when="3">
-          <h1>Build a team:</h1>
-          <p>Invite others to manage this campaign with you.</p>
+          <div class="padded">
+            <h1>Add Permissions</h1>
+            <p>Get your team involved.</p>
+          </div>
           <form ng-submit="sendInvite(first, last, invite_email, level, buildCampaign.permissions.pending)" class="card padded">
-            <h3>Add Team:</h3>
+            <h3>Invite Teammate</h3>
             <label for="name">Full Name:</label>
             <input ng-model="name" type="text" name="name" placeholder="name"/>
             <label for="email">Email:</label>
@@ -88,45 +101,45 @@
             <label for="message">Message:</label>
             <textarea placeholder="optional"></textarea>
             <div>
-              <label>Permission level:</label>
-              <fieldset class="inline">
-                <input id="perm_respond" ng-model="perm_respond" type="checkbox" name="perm_respond" ng-true-value="respond"/>
-                <label for="perm_respond">view only</label>
+              <label>Permission level</label>
+              <fieldset>
+                <input id="perm_respond" ng-model="perm_respond" type="checkbox" name="perm_respond" ng-true-value="respond" class="inline"/>
+                <label for="perm_respond" class="inline">review only</label>
               </fieldset>
-              <fieldset class="inline">
-                <input id="perm_export" ng-model="perm_export" type="checkbox" name="perm_export" ng-true-value="export"/>
-                <label for="perm_export">respond</label>
+              <fieldset>
+                <input id="perm_export" ng-model="perm_export" type="checkbox" name="perm_export" ng-true-value="export" class="inline"/>
+                <label for="perm_export" class="inline">review + respond</label>
               </fieldset>
-              <fieldset class="inline">
-                <input id="perm_admin" ng-model="perm_admin" type="checkbox" name="perm_admin" ng-true-value="admin"/>
-                <label for="perm_admin">admin + export</label>
+              <fieldset>
+                <input id="perm_admin" ng-model="perm_admin" type="checkbox" name="perm_admin" ng-true-value="admin" class="inline"/>
+                <label for="perm_admin" class="inline">admin</label>
               </fieldset>
             </div>
             <button class="new_invite btn">Send</button>
           </form>
           <div class="card padded">
-            <h2>Permissions set:</h2>
+            <h2>Permissions set</h2>
             <ul>
               <li ng-repeat="person in buildCampaign.permissions.accepted">{{person.first}} {{person.last}}<small class="status">permission level: {{person.level}}</small>
                 <button ng-click="deleteListItem($index, buildCampaign.permissions.accepted)" class="btn right">revoke</button>
                 <div>
-                  <label>change permissions:</label>
-                  <fieldset class="inline">
-                    <input id="perm_respond" ng-model="person.level" type="checkbox" name="perm_respond" ng-true-value="respond"/>
-                    <label for="perm_respond">view only</label>
+                  <label>change permissions</label>
+                  <fieldset>
+                    <input id="perm_respond_change" ng-model="person.level" type="checkbox" name="perm_respond" ng-true-value="respond" class="inline"/>
+                    <label for="perm_respond_change" class="inline">review only</label>
                   </fieldset>
-                  <fieldset class="inline">
-                    <input id="perm_export" ng-model="person.level" type="checkbox" name="perm_export" ng-true-value="respond"/>
-                    <label for="perm_export">respond</label>
+                  <fieldset>
+                    <input id="perm_export_change" ng-model="person.level" type="checkbox" name="perm_export" ng-true-value="export" class="inline"/>
+                    <label for="perm_export_change" class="inline">review + respond</label>
                   </fieldset>
-                  <fieldset class="inline">
-                    <input id="perm_admin" ng-model="person.level" type="checkbox" name="perm_admin" ng-true-value="admin"/>
-                    <label for="perm_admin">admin + export</label>
+                  <fieldset>
+                    <input id="perm_admin_change" ng-model="person.level" type="checkbox" name="perm_admin" ng-true-value="admin" class="inline"/>
+                    <label for="perm_admin_change" class="inline">admin</label>
                   </fieldset>
                 </div>
               </li>
             </ul>
-            <h2>Pending Invites:</h2>
+            <h2>Pending Invites</h2>
             <ul>
               <li ng-repeat="person in buildCampaign.permissions.pending">{{person.first}} {{person.last}} ({{person.email}}, {{person.level}})<small class="status">pending...</small>
                 <button class="btn right clear">resend</button>
@@ -136,37 +149,9 @@
           </div>
         </div>
         <div ng-switch-when="4">
-          <h1>This step needs to be removed.</h1>
           <div class="card padded">
-            <h3>Security:</h3>
-            <fieldset class="inline">
-              <input type="checkbox"/>
-              <label>public</label>
-            </fieldset>
-            <fieldset class="inline">
-              <input type="checkbox"/>
-              <label>private</label>
-            </fieldset>
-            <fieldset class="inline">
-              <input type="checkbox"/>
-              <label>passphrase protected</label>
-            </fieldset>
-          </div>
-          <div>
-            <input id="discoverable" ng-model="buildCampaign.discoverable" type="checkbox" class="inline"/>
-            <label for="discoverable" class="inline">location discoverable?</label>
-          </div>
-          <div ng-show="buildCampaign.discoverable">
-            <ol>
-              <li ng-repeat="location in buildCampaign.locationsList">
-                <p ng-bind="location.text"></p>
-              </li>
-            </ol>
-            <form ng-submit="addLocation(addLocation_address.text, buildCampaign.locationsList)" ng-model="addLocation_form" name="addLocation_form">
-              <label for="url">Add an address to your campaign (optional):</label>
-              <input id="addLocation_address" ng-model="addLocation_address.text" type="text" name="addLocation_address" placeholder="1 Street Address, Whereverville, FL"/>
-              <button class="btn">+ location</button>
-            </form>
+            <h1>Launch campaign</h1>
+            <p>Send your campiagn into the world.</p>
           </div>
         </div>
       </div>
